crates/aranya-policy-compiler/tests/data/facts/leading_binds_invalid_fact_literal.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: fact literal does not match definition: leading bind values not allowed
  |
3 |     check exists Foo[x: ?, y: 42] => {} else test_fail()
  |                         ^ leading bind values not allowed
